[gd_scene load_steps=15 format=3 uid="uid://dg0pyopln4yjk"]

[ext_resource type="Script" path="res://src/Scenes/Actors/Player.gd" id="1_rqiwo"]
[ext_resource type="Texture2D" uid="uid://c0jqbhx8bmfp4" path="res://assets/characters/Circle-0003.png" id="2_olfa5"]
[ext_resource type="Script" path="res://src/Scenes/Actors/Actor_States/PlayerStates/PlayerStateMachine.gd" id="3_n8u1j"]
[ext_resource type="Script" path="res://src/Scenes/Actors/Actor_States/PlayerStates/Idle.gd" id="4_y6fdd"]
[ext_resource type="Script" path="res://src/Scenes/Actors/Actor_States/PlayerStates/Move.gd" id="5_pwcfs"]
[ext_resource type="Script" path="res://src/Scenes/Actors/Actor_States/PlayerStates/Dash.gd" id="6_dhbsk"]
[ext_resource type="Script" path="res://src/Scenes/Actors/Actor_Abilities/PlayerAbilities/upgrade_factory.gd" id="7_b61lc"]
[ext_resource type="Script" path="res://src/Scenes/Objects/Input_Handler.gd" id="9_on76a"]
[ext_resource type="Script" path="res://src/Scenes/External/joystick/virtual_joystick.gd" id="9_xhkwm"]
[ext_resource type="Texture2D" uid="uid://bm30au8mjfc2f" path="res://src/Scenes/External/joystick/textures/joystick_base_outline.png" id="10_u7rug"]
[ext_resource type="Texture2D" uid="uid://dt13r06u87fib" path="res://src/Scenes/External/joystick/textures/joystick_tip_arrows.png" id="11_y5c6k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_rqwmu"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_las5g"]
radius = 10.0499

[sub_resource type="CircleShape2D" id="CircleShape2D_5k7s5"]
radius = 28.0

[node name="Player" type="CharacterBody2D"]
position = Vector2(193, 160)
collision_mask = 10
floor_constant_speed = true
script = ExtResource("1_rqiwo")

[node name="player" type="Sprite2D" parent="."]
position = Vector2(0, -8)
scale = Vector2(0.233848, 0.227606)
texture = ExtResource("2_olfa5")

[node name="Invurnerable" type="Timer" parent="."]

[node name="DashTimer" type="Timer" parent="."]

[node name="DashImmuneTimer" type="Timer" parent="."]

[node name="AbilityTimer" type="Timer" parent="."]

[node name="PlayerBounds" type="CollisionShape2D" parent="."]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_rqwmu")

[node name="CollitionArea" type="Area2D" parent="."]
collision_mask = 6

[node name="CollisionShape" type="CollisionShape2D" parent="CollitionArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_las5g")

[node name="DashArea" type="Area2D" parent="."]
collision_mask = 2
linear_damp = 1000.0

[node name="DashShape" type="CollisionShape2D" parent="DashArea"]
position = Vector2(0, -8)
shape = SubResource("CircleShape2D_5k7s5")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("3_n8u1j")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("4_y6fdd")

[node name="Move" type="Node" parent="StateMachine"]
script = ExtResource("5_pwcfs")

[node name="Dash" type="Node" parent="StateMachine"]
script = ExtResource("6_dhbsk")

[node name="DashTransitionTimer" type="Timer" parent="StateMachine"]

[node name="KnockbackTimer" type="Timer" parent="StateMachine"]

[node name="Upgrade_Factory" type="Node" parent="."]
script = ExtResource("7_b61lc")

[node name="UI" type="CanvasLayer" parent="."]
process_mode = 3
script = ExtResource("9_on76a")

[node name="Virtual Joystick" type="Control" parent="UI"]
layout_mode = 3
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_top = -387.0
offset_right = 303.0
offset_bottom = -87.0
grow_vertical = 0
script = ExtResource("9_xhkwm")
visibility_mode = 1
action_left = "left"
action_right = "right"
action_up = "up"
action_down = "down"

[node name="Base" type="TextureRect" parent="UI/Virtual Joystick"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(100, 100)
mouse_force_pass_scroll_events = false
texture = ExtResource("10_u7rug")
stretch_mode = 5

[node name="Tip" type="TextureRect" parent="UI/Virtual Joystick/Base"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -50.0
offset_top = -50.0
offset_right = 50.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(50, 50)
texture = ExtResource("11_y5c6k")
stretch_mode = 5

[connection signal="area_entered" from="CollitionArea" to="." method="_on_collition_area_area_entered"]
